<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/schedule_label_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/timing_label"
            android:contentDescription="@string/timing_label"/>

        <TextView
            android:id="@+id/schedule_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/schedule_label_tv"
            android:padding="8dp"
            android:text="@string/hd_timing"
            android:contentDescription="@string/hd_timing"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/select_schedule_label_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/class_name_tv"
            android:padding="8dp"
            android:text="@string/schedule_label"
            android:contentDescription="@string/schedule_label"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_schedule_label_tv"
            android:text="@string/monday"
            android:contentDescription="@string/monday"
            android:textColor="@color/colorText" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_schedule_label_tv"
            android:layout_toRightOf="@id/checkbox1"
            android:text="@string/tuesday"
            android:contentDescription="@string/tuesday"
            android:textColor="@color/colorText"
            android:layout_toEndOf="@id/checkbox1" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_schedule_label_tv"
            android:layout_toRightOf="@id/checkbox2"
            android:text="@string/wednesday"
            android:contentDescription="@string/wednesday"
            android:textColor="@color/colorText"
            android:layout_toEndOf="@id/checkbox2" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox1"
            android:text="@string/thursday"
            android:contentDescription="@string/thursday"
            android:textColor="@color/colorText" />

        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox1"
            android:layout_toRightOf="@id/checkbox4"
            android:text="@string/friday"
            android:contentDescription="@string/friday"
            android:textColor="@color/colorText"
            android:layout_toEndOf="@id/checkbox4" />


        <Button
            android:id="@+id/fav_btn"
            android:layout_width="164dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="73dp"
            android:background="@drawable/rounded_button_drawable"
            android:padding="8dp"
            android:text="@string/enroll_btn"
            android:contentDescription="@string/enroll_btn"
            android:textColor="@color/colorText"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp" />

        <TextView
            android:id="@+id/class_name_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/schedule_tv"
            android:padding="8dp"
            android:text="@string/handwriting"
            android:contentDescription="@string/handwriting"
            />

        <TextView
            android:id="@+id/meet_label_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox5"
            android:padding="8dp"
            android:text="@string/teacher_label"
            android:contentDescription="@string/teacher_label"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/teacher_bio_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meet_label_tv"
            android:padding="8dp"
            android:text="@string/hd_bio"
            android:contentDescription="@string/hd_bio"/>
    </RelativeLayout>

</ScrollView>