<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/schedule_label_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/timing_label"
            android:contentDescription="@string/timing_label"/>

        <TextView
            android:id="@+id/schedule_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/schedule_label_tv"
            android:padding="8dp"
            android:text="@string/kk_timing"
            android:contentDescription="@string/kk_timing"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/select_schedule_label_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/class_name_tv"
            android:padding="8dp"
            android:text="@string/schedule_label"
            android:contentDescription="@string/schedule_label"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_schedule_label_tv"
            android:text="@string/saturday"
            android:contentDescription="@string/saturday"
            android:textColor="@color/colorText" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_schedule_label_tv"
            android:layout_toRightOf="@id/checkbox1"
            android:text="@string/sunday"
            android:contentDescription="@string/sunday"
            android:textColor="@color/colorText"
            android:layout_toEndOf="@id/checkbox1" />

        <Button
            android:id="@+id/fav_btn"
            android:layout_width="164dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="73dp"
            android:background="@drawable/rounded_button_drawable"
            android:padding="8dp"
            android:text="@string/enroll_btn"
            android:contentDescription="@string/enroll_btn"
            android:textColor="@color/colorText"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp" />

        <TextView
            android:id="@+id/class_name_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/schedule_tv"
            android:layout_marginEnd="93dp"
            android:padding="8dp"
            android:text="@string/kathak"
            android:contentDescription="@string/kathak"
            />

        <TextView
            android:id="@+id/meet_label_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox1"
            android:padding="8dp"
            android:text="@string/teacher_label"
            android:contentDescription="@string/teacher_label"/>

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="136dp"
            android:layout_height="110dp"
            android:layout_below="@id/meet_label_tv"
            android:layout_gravity="center"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/teacher_bio_tv"
            style="@style/FragTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:padding="8dp"
            android:text="@string/kt_teacher_bio"
            android:contentDescription="@string/kt_teacher_bio"/>
    </RelativeLayout>

</ScrollView>